# server/src/main/resources/openapi.yaml
@@ -25,25 +25,101 @@ paths:
       responses:
         200:
           $ref: "#/components/responses/ServerResponse"
+        400:
+          $ref: "#/components/responses/BadRequest"
         404:
           $ref: "#/components/responses/NotFound"
         500:
           $ref: "#/components/responses/ServerError"
-  /server/game:
+  /server/game/player:
     get:
-      summary: "GET server/game"
-      operationId: "getGameInformation"
+      summary: "GET server/game/player"
+      operationId: "getPlayerHealthAndMana"
+      parameters:
+        - name: playerName
+          in: query
+          required: true
+          description: player name
+          schema:
+            type: string
       responses:
         200:
-          $ref: "#/components/schemas/GameBean"
+          description: "OK"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PlayerBean"
+        400:
+          $ref: "#/components/responses/BadRequest"
         404:
           $ref: "#/components/responses/NotFound"
         500:
           $ref: "#/components/responses/ServerError"
-  /server/game/card:
+  /server/game/player/active:
     get:
-      summary: "GET server/game/card"
-      operationId: "getPlayerCard"
+      summary: "GET server/game/player/active"
+      operationId: "getActivePlayer"
+      responses:
+        200:
+          description: "OK"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PlayerActiveBean"
+        400:
+          $ref: "#/components/responses/BadRequest"
+        404:
+          $ref: "#/components/responses/NotFound"
+        500:
+          $ref: "#/components/responses/ServerError"
+    put:
+      summary: "PUT server/game/player/active"
+      operationId: "setActivePlayer"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/PlayerActiveBean"
+      responses:
+        200:
+          $ref: "#/components/responses/ServerResponse"
+        400:
+          $ref: "#/components/responses/BadRequest"
+        404:
+          $ref: "#/components/responses/NotFound"
+        500:
+          $ref: "#/components/responses/ServerError"
+  /server/game/player/play:
+    put:
+      summary: "POST server/game/player/play"
+      operationId: "playCard"
+      parameters:
+        - name: playerName
+          in: query
+          required: true
+          description: player name
+          schema:
+            type: string
+        - name: cardIndex
+          in: query
+          required: true
+          description: card index to play
+          schema:
+            type: number
+      responses:
+        200:
+          $ref: "#/components/responses/ServerResponse"
+        400:
+          $ref: "#/components/responses/BadRequest"
+        404:
+          $ref: "#/components/responses/NotFound"
+        500:
+          $ref: "#/components/responses/ServerError"
+  /server/game/player/card:
+    get:
+      summary: "GET server/game/player/card"
+      operationId: "getPlayerCards"
       parameters:
         - name: playerName
           in: query
@@ -60,6 +136,8 @@ paths:
                 type: "array"
                 items:
                   $ref: "#/components/schemas/DamageCardBean"
+        400:
+          $ref: "#/components/responses/BadRequest"
         404:
           $ref: "#/components/responses/NotFound"
         500:
@@ -72,6 +150,12 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/ResponseBean"
+    BadRequest:
+      description: Not found
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/BadRequestBean"
     NotFound:
       description: Not found
       content:
@@ -99,24 +183,14 @@ components:
           description: "player mana slots"
       required:
         - name
-    GameBean:
+    PlayerActiveBean:
       type: object
       properties:
-        playerOne:
-          $ref: "#/components/schemas/PlayerBean"
-        playerOneCards:
-          type: array
-          items:
-            $ref: "#/components/schemas/DamageCardBean"
-        playerTwo:
-          $ref: "#/components/schemas/PlayerBean"
-        playerTwoCards:
-          type: array
-          items:
-            $ref: "#/components/schemas/DamageCardBean"
+        name:
+          type: string
+          description: "active player name"
       required:
-        - player1
-        - player2
+        - name
     DamageCardBean:
       type: object
       properties:
@@ -131,6 +205,14 @@ components:
         message:
           type: string
           description: "Response message"
+      required:
+        - message
+    BadRequestBean:
+      type: object
+      properties:
+        message:
+          type: string
+          description: "Bad request message"
       required:
         - message
     ErrorBean:
